--- a/telaChamada.html
+++ b/telaChamada.html
@@ -9,10 +9,10 @@
 <body>
     <div class="header">
         <div class="header-left">
-          <img src="logo-menu-sidebar.jpg" class="sidemenu">
+          <input type="image" src="logo-menu-sidebar.jpg" name="saveForm" class="sidemenu" id="saveForm" />
         </div>
         <div class="header-center">
-          <img src="logo-da-empresa.png" class="logo">
+          <input type="image" src="logo-da-empresa.png" name="saveForm" class="logo" id="saveForm" />
         </div>
         <div class="header-right">
           <input type="text" placeholder="Digite o que deseja pesquisar..." class="pesquisa">
