--- a/telaCadastro.html
+++ b/telaCadastro.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Cadastro</title>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <div class="header">
-        <div class="header-left">
-          <img src="logo-menu-sidebar.jpg" class="sidemenu">
-        </div>
-        <div class="header-center">
-          <img src="logo-da-empresa.png" class="logo">
-        </div>
-        <div class="header-right">
-          <input type="text" placeholder="Digite o que deseja pesquisar..." class="pesquisa">
-          <button class="botao"> PESQUISAR </button>
-        </div>
-      </div>
+  <div class="header">
+    <div class="header-left">
+      <input type="image" src="logo-menu-sidebar.jpg" name="saveForm" class="sidemenu" id="saveForm" />
+    </div>
+    <div class="header-center">
+      <input type="image" src="logo-da-empresa.png" name="saveForm" class="logo" id="saveForm" />
+    </div>
+    <div class="header-right">
+      <input type="text" placeholder="Digite o que deseja pesquisar..." class="pesquisa">
+      <button class="botao"> PESQUISAR </button>
+    </div>
+  </div>
     <div class="page">
         <form method="POST" class="formLogin">
             <h1>Cadastrar</h1>
