--- a/telaLogin.html
+++ b/telaLogin.html
@@ -8,18 +8,18 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <div class="header">
-        <div class="header-left">
-          <img src="logo-menu-sidebar.jpg" class="sidemenu">
-        </div>
-        <div class="header-center">
-          <img src="logo-da-empresa.png" class="logo">
-        </div>
-        <div class="header-right">
-          <input type="text" placeholder="Digite o que deseja pesquisar..." class="pesquisa">
-          <button class="botao"> PESQUISAR </button>
-        </div>
-      </div>
+  <div class="header">
+    <div class="header-left">
+      <input type="image" src="logo-menu-sidebar.jpg" name="saveForm" class="sidemenu" id="saveForm" />
+    </div>
+    <div class="header-center">
+      <input type="image" src="logo-da-empresa.png" name="saveForm" class="logo" id="saveForm" />
+    </div>
+    <div class="header-right">
+      <input type="text" placeholder="Digite o que deseja pesquisar..." class="pesquisa">
+      <button class="botao"> PESQUISAR </button>
+    </div>
+  </div>
     <div class="page">
         <form method="POST" class="formLogin">
             <h1>Login</h1>
@@ -28,7 +28,7 @@
             <input type="email" placeholder="Digite seu e-mail" autofocus="true" />
             <label for="password">Senha</label>  
             <input type="password" placeholder="Digite sua senha" />
-            <a href="/">Esqueci minha senha</a>
+            <a href="telaEsqueci.html">Esqueci minha senha</a>
             <a href="telaCadastro.html">Não tenho conta</a>
             <input type="submit" value="Acessar" class="btn" />
         </form>
