--- a/index.html
+++ b/index.html
@@ -8,44 +8,9 @@
 </head>
 <body>
   <header class="header-padrao sticky-padrao">
-    <p>weofuihweifhweoiufe</p>
+    <a href="/index.html"> <img src="/views/img/logo-da-empresa.png" class="logo-empresa"> </a>
   </header>
-  
   <main class="conteudo-padrao">
-    <table class="tabela-padrao">
-      <tr>
-        <th> Sonaro </th>
-        <th> Sonaro </th>
-        <th> Sonaro </th>
-      </tr>
-      <tr>
-        <td> Sonaro </td>
-        <td> Sonaro </td>
-        <td> Sonaro </td>
-      </tr>
-      <tr>
-        <td> Sonaro </td>
-        <td> Sonaro </td>
-        <td> Sonaro </td>
-      </tr>
-    </table>
-
-    <h1 class="titulo-padrao "> TESTE </h1>  
-    <h2 class="titulo-padrao"> TESTE </h2>
-    <h3 class="titulo-padrao"> TESTE </h3>
-    <h4 class="titulo-padrao"> TESTE </h4>
-    <h5 class="titulo-padrao"> TESTE </h5>
-    <h6 class="titulo-padrao"> TESTE </h6>
-    <p>weofuihweifhweoiufe</p>
-    <p>weofuihweifhweoiufe</p>
-    <p>weofuihweifhweoiufe</p>
-    <p>weofuihweifhweoiufe</p>
-    <p>weofuihweifhweoiufe</p>
-    <p>weofuihweifhweoiufe</p>
-    <p>weofuihweifhweoiufe</p>
-    <p>weofuihweifhweoiufe</p>
-    <p>weofuihweifhweoiufe</p>
-    <p>weofuihweifhweoiufe</p>
 
   </main>
   
