--- a/index.html
+++ b/index.html
@@ -11,36 +11,9 @@
     <a href="/index.html"> <img src="/views/img/logo-da-empresa.png" class="logo-empresa"> </a>
   </header>
   <main class="conteudo-padrao">
-   <!-- slider container -->
-   <div class="slider">
-
-    <!-- slide 1 -->
-    <div class="slide">
-      <img
-        src="https://source.unsplash.com/random?landscape,mountain"
-        alt=""
-      />
-    </div>
-
-     <!-- slide 2 -->
-    <div class="slide">
-      <img src="https://source.unsplash.com/random?landscape,cars" alt="" />
-    </div>
-
-     <!-- slide 3 -->
-    <div class="slide">
-      <img src="https://source.unsplash.com/random?landscape,night" alt="" />
-    </div>
-
-     <!-- slide 4 -->
-    <div class="slide">
-      <img src="https://source.unsplash.com/random?landscape,city" alt="" />
-    </div>
-
-     <!-- Control buttons -->
-    <button class="btn btn-next">></button>
-    <button class="btn btn-prev"><
-  </div>
+    <section class="carrosel">
+      <img src="/views/img/img1.jpg" class="slide">
+    </section>
   </main>
   
   <footer class="footer-padrao">
