--- a/index.html
+++ b/index.html
@@ -12,8 +12,20 @@
   </header>
   <main class="conteudo-padrao">
     <section class="carrosel">
-      <img src="/views/img/img1.jpg" class="slide">
+      <img src="/views/img/carroselplaceholder.png" class="slide">
+      <div style="text-align:center">
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+      </div>
     </section>
+    <div>
+      <div class="coluna">
+        <section class="noticia-recente">
+
+        </section>
+      </div>
+    </div>
   </main>
   
   <footer class="footer-padrao">
