--- a/index.html
+++ b/index.html
@@ -19,10 +19,45 @@
         <span class="dot"></span>
       </div>
     </section>
-    <div>
+    <div class="recentes">
       <div class="coluna">
         <section class="noticia-recente">
-
+          <img src="/views/img/noticia1.jpg">
+          <p> noticia noticia noticia noticia noticia noticia noticia 
+          noticia noticia noticia noticia noticia noticia noticia 
+          noticia noticia noticia noticia noticia noticia  </p>
+        </section>
+        <section class="noticia-recente">
+          <img src="/views/img/noticia2.jpg">
+          <p> noticia noticia noticia noticia noticia noticia noticia 
+          noticia noticia noticia noticia noticia noticia noticia 
+          noticia noticia noticia noticia noticia noticia  </p>
+        </section>
+        <section class="noticia-recente">
+          <img src="/views/img/noticia3.jpg">
+          <p> noticia noticia noticia noticia noticia noticia noticia 
+          noticia noticia noticia noticia noticia noticia noticia 
+          noticia noticia noticia noticia noticia noticia  </p>
+        </section>
+      </div>
+      <div class="coluna">
+        <section class="postagem-recente">
+          <img src="/views/img/conta2.jpg">
+          <p> noticia noticia noticia noticia noticia noticia noticia 
+          noticia noticia noticia noticia noticia noticia noticia 
+          noticia noticia noticia noticia noticia noticia  </p>
+        </section>
+        <section class="postagem-recente">
+          <img src="/views/img/conta1.jpg">
+          <p> noticia noticia noticia noticia noticia noticia noticia 
+          noticia noticia noticia noticia noticia noticia noticia 
+          noticia noticia noticia noticia noticia noticia  </p>
+        </section>
+        <section class="postagem-recente">
+          <img src="/views/img/conta3.jpg">
+          <p> noticia noticia noticia noticia noticia noticia noticia 
+          noticia noticia noticia noticia noticia noticia noticia 
+          noticia noticia noticia noticia noticia noticia  </p>
         </section>
       </div>
     </div>
