--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       <button onclick="myFunction()" class="dropbtn"> Pesquisar </button>
       <div id="myDropdown" class="dropdown-content">
         <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
-        <a href=""> Zeca </a>
-        <a href=""> Zezinho </a>
-        <a href=""> Joao </a>
+        <a href="/views/paginas/TelaPerfil.html"> Zeca </a>
+        <a href="/views/paginas/TelaPerfil.html"> Zezinho </a>
+        <a href="/views/paginas/TelaPerfil.html"> Joao </a>
       </div>
     </div> 
 
