--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       justify-content: center;
       padding: 5vh;
       row-gap: 0px;
+      width: 200vh;
     }
 
     .noticia-maior__texto:hover {
@@ -38,7 +39,7 @@
     }
 
     .noticia-maior__img {
-      width: 160vh;
+      width: 100vh;
       height: 70vh;
       border-top-left-radius: 8px;
       border-bottom-left-radius: 8px;
@@ -46,7 +47,7 @@
     }
 
     .noticia-maior__texto {
-      width: 160vh;
+      width: 100vh;
       height: 70vh;
       display: flex;
       flex-direction: column;
@@ -206,11 +207,11 @@
 </div>
 <div id="dropdownMenuProfile" class="dropdown-menu">
   <div class="dropdown-menu__element" id="dropdownElement">
-    <a href="TelaPerfil.html"><img src="views/img/user.svg"></a>
+    <a href="/views/paginas/TelaPerfil.html"><img src="views/img/user.svg"></a>
     <p> Perfil </p>
   </div>
   <div class="dropdown-menu__element" id="dropdownElement">
-    <a href="index.html"><img src="views/img/log-out.svg"></a>
+    <a href="/index.html"><img src="views/img/log-out.svg"></a>
     <p> Logout </p>
   </div>
 </div>
